GITIGNORE will not ignore the CMakeLists.txt of packages

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,5 +1,7 @@
 # Ignore the CMakeLists.txt in this folder
 CMakeLists.txt
+# Don't ignore the CMakeLists.txt of the children
+!*/CMakeLists.txt
 
 # Ignore the test folders
 test_*/
