--- a/src/cpp_basic_nodes/CMakeLists.txt
+++ b/src/cpp_basic_nodes/CMakeLists.txt
@@ -134,6 +134,7 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/cpp_basic_nodes_node.cpp)
 add_executable(simple_hello_world src/simple_hello_world.cpp)
 add_executable(simple_cpp_publisher src/simple_publisher.cpp)
+add_executable(simple_cpp_subscriber src/simple_subscriber.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,6 +152,7 @@ add_executable(simple_cpp_publisher src/simple_publisher.cpp)
 # )
 target_link_libraries(simple_hello_world ${catkin_LIBRARIES})
 target_link_libraries(simple_cpp_publisher ${catkin_LIBRARIES})
+target_link_libraries(simple_cpp_subscriber ${catkin_LIBRARIES})
 
 #############
 ## Install ##
