--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -164,6 +164,7 @@ include_directories(
 catkin_install_python(PROGRAMS
     scripts/simple_hello_world.py
     scripts/simple_publisher.py
+    scripts/simple_subscriber.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
