--- a/src/py_basic_nodes/package.xml
+++ b/src/py_basic_nodes/package.xml
@@ -53,6 +53,8 @@
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
