--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -185,6 +185,7 @@ catkin_install_python(PROGRAMS
     scripts/simple_subscriber.py
     scripts/simple_service_server.py
     scripts/simple_service_client.py
+    scripts/simple_action_server.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
