Added C++ Node to access parameter server

--- a/src/cpp_basic_nodes/CMakeLists.txt
+++ b/src/cpp_basic_nodes/CMakeLists.txt
@@ -157,6 +157,7 @@ add_executable(simple_cpp_service_server src/simple_service_server.cpp)
 add_executable(simple_cpp_service_client src/simple_service_client.cpp)
 add_executable(simple_cpp_action_server src/simple_action_server.cpp)
 add_executable(simple_cpp_action_client src/simple_action_client.cpp)
+add_executable(simple_cpp_parameter_node src/simple_parameter_server.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -183,6 +184,7 @@ target_link_libraries(simple_cpp_service_server ${catkin_LIBRARIES})
 target_link_libraries(simple_cpp_service_client ${catkin_LIBRARIES})
 target_link_libraries(simple_cpp_action_server ${catkin_LIBRARIES})
 target_link_libraries(simple_cpp_action_client ${catkin_LIBRARIES})
+target_link_libraries(simple_cpp_parameter_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
