Added Simple Parameter Server for py_basic_nodes package

--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -187,6 +187,7 @@ catkin_install_python(PROGRAMS
     scripts/simple_service_client.py
     scripts/simple_action_server.py
     scripts/simple_action_client.py
+    scripts/simple_parameter_server.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
