--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -188,6 +188,7 @@ catkin_install_python(PROGRAMS
     scripts/simple_action_server.py
     scripts/simple_action_client.py
     scripts/simple_parameter_server.py
+    scripts/launch1_publisher.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
