--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -189,6 +189,7 @@ catkin_install_python(PROGRAMS
     scripts/simple_action_client.py
     scripts/simple_parameter_server.py
     scripts/launch1_publisher.py
+    scripts/launch1_subscriber.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
