--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   actionlib
   genmsg
   actionlib_msgs
+  dynamic_reconfigure
 )
 
 ## System dependencies are found with CMake's conventions
@@ -108,6 +109,9 @@ generate_messages(
 #   cfg/DynReconf1.cfg
 #   cfg/DynReconf2.cfg
 # )
+generate_dynamic_reconfigure_options(
+  cfg/FirstDR.cfg
+)
 
 ###################################
 ## catkin specific configuration ##
