Added Dynamic Reconfiguration server for FirstDR.cfg (Python)

--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -195,6 +195,7 @@ catkin_install_python(PROGRAMS
     scripts/launch1_publisher.py
     scripts/launch1_subscriber.py
     scripts/launch1_parameters.py
+    scripts/simple_FirstDR_server.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
