--- a/src/cpp_basic_nodes/CMakeLists.txt
+++ b/src/cpp_basic_nodes/CMakeLists.txt
@@ -166,6 +166,7 @@ add_executable(launch1_publisher src/launch1_publisher.cpp)
 add_executable(launch1_subscriber src/launch1_subscriber.cpp)
 add_executable(launch1_parameters src/launch1_parameters.cpp)
 add_executable(simple_cpp_firstdr_server src/simple_FirstDR_server.cpp)
+add_executable(simple_cpp_firstdr_client src/simple_FirstDR_client.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -181,6 +182,7 @@ add_dependencies(simple_cpp_service_client ${${PROJECT_NAME}_EXPORTED_TARGETS} $
 add_dependencies(simple_cpp_action_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(simple_cpp_action_client ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(simple_cpp_firstdr_server ${PROJECT_NAME}_gencfg)
+add_dependencies(simple_cpp_firstdr_client ${PROJECT_NAME}_gencfg)
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
@@ -198,6 +200,7 @@ target_link_libraries(launch1_publisher ${catkin_LIBRARIES})
 target_link_libraries(launch1_subscriber ${catkin_LIBRARIES})
 target_link_libraries(launch1_parameters ${catkin_LIBRARIES})
 target_link_libraries(simple_cpp_firstdr_server ${catkin_LIBRARIES})
+target_link_libraries(simple_cpp_firstdr_client ${catkin_LIBRARIES})
 
 #############
 ## Install ##
