[IGNORE] Added minor documentation changes

--- a/src/py_basic_nodes/CMakeLists.txt
+++ b/src/py_basic_nodes/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   genmsg
   actionlib_msgs
   dynamic_reconfigure
+  basic_py_libs
 )
 
 ## System dependencies are found with CMake's conventions
