--- a/src/py_basic_nodes/package.xml
+++ b/src/py_basic_nodes/package.xml
@@ -56,6 +56,7 @@
   <build_export_depend>rospy</build_export_depend>
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
+  <depend>basic_py_libs</depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
