--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 # Ignore the build, devel and .catkin_workspace files
 devel/
 build/
+logs/
+.catkin_tools/
 .catkin_workspace
 
 # Ignore Python compiled files
