--- a/src/basic_cpp_libs/CMakeLists.txt
+++ b/src/basic_cpp_libs/CMakeLists.txt
@@ -101,9 +101,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES basic_cpp_libs
-#  CATKIN_DEPENDS roscpp
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME} ${PROJECT_NAME}_basic_math
+  CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
 )
 
@@ -114,7 +114,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -122,6 +122,13 @@ include_directories(
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/basic_cpp_libs.cpp
 # )
+add_library(${PROJECT_NAME}
+  src/simple_library.cpp
+)
+add_library(${PROJECT_NAME}_basic_math
+  # Important functions (source code)
+  src/basic_math/imp_functions/factorial.cpp
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -132,6 +139,8 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/basic_cpp_libs_node.cpp)
+add_executable(simple_library_node src/simple_library_node.cpp)
+add_executable(basic_math_node src/basic_math_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,6 +156,12 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+# Libraries in this package
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}_basic_math ${catkin_LIBRARIES})
+# Nodes in the package
+target_link_libraries(simple_library_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(basic_math_node ${catkin_LIBRARIES} ${PROJECT_NAME}_basic_math)
 
 #############
 ## Install ##
@@ -175,6 +190,11 @@ include_directories(
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
 # )
+install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_basic_math
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
@@ -182,6 +202,16 @@ include_directories(
 #   FILES_MATCHING PATTERN "*.h"
 #   PATTERN ".svn" EXCLUDE
 # )
+# simple_library library
+install(
+  DIRECTORY include/${PROJECT_NAME}
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+# basic_math library
+install(
+  DIRECTORY include/basic_math
+  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}/basic_math
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
