--- a/src/cpp_basic_nodes/package.xml
+++ b/src/cpp_basic_nodes/package.xml
@@ -56,6 +56,7 @@
   <build_export_depend>roscpp</build_export_depend>
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
+  <depend>basic_cpp_libs</depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
