--- a/src/basic_robotics/CMakeLists.txt
+++ b/src/basic_robotics/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(catkin REQUIRED COMPONENTS
   tf2
   tf2_ros
   sensor_msgs
+  geometry_msgs
+  visualization_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -108,7 +110,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES basic_robotics
-  CATKIN_DEPENDS roscpp rospy std_msgs sensor_msgs tf2 tf2_ros
+  CATKIN_DEPENDS roscpp rospy std_msgs sensor_msgs tf2 tf2_ros geometry_msgs visualization_msgs
 #  DEPENDS system_lib
 )
 
@@ -139,6 +141,7 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/basic_robotics_node.cpp)
 add_executable(t1_laser_scan_pub src/t1_laser_scan_publisher.cpp)
 add_executable(t1_tf_broadcaster src/t1_tf_publisher.cpp)
+add_executable(t1_markers_publisher src/t1_markers_publilsher.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -156,6 +159,7 @@ add_executable(t1_tf_broadcaster src/t1_tf_publisher.cpp)
 # )
 target_link_libraries(t1_laser_scan_pub ${catkin_LIBRARIES})
 target_link_libraries(t1_tf_broadcaster ${catkin_LIBRARIES})
+target_link_libraries(t1_markers_publisher ${catkin_LIBRARIES})
 
 #############
 ## Install ##
@@ -173,6 +177,7 @@ target_link_libraries(t1_tf_broadcaster ${catkin_LIBRARIES})
 catkin_install_python(PROGRAMS
   scripts/t1_laser_scan_publisher.py
   scripts/t1_tf_publisher.py
+  scripts/t1_markers_publisher.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
