--- a/src/basic_robotics/world/models/building_floor/model.config
+++ b/src/basic_robotics/world/models/building_floor/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>floor_objects</name>
+    <name>building_floor</name>
     <version>1.0</version>
     <sdf version="1.7">model.sdf</sdf>
     <author>
