--- a/src/basic_robotics/world/models/floor_model/model.config
+++ b/src/basic_robotics/world/models/floor_model/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>floor_boundary</name>
+    <name>floor_model</name>
     <version>1.0</version>
     <sdf version="1.7">model.sdf</sdf>
     <author>
